--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,9 @@ jobs:
               run: |
                   npm install
                   npm run build --if-present
-#            - name: Create Release
-#              # https://github.com/ncipollo/release-action
-#              uses: ncipollo/release-action@v1.7.3
-#              with:
-#                  artifacts: "main.js,manifest.json,styles.css"
-#                  token: ${{ secrets.GITHUB_TOKEN }}
+            - name: Create Release
+              # https://github.com/ncipollo/release-action
+              uses: ncipollo/release-action@v1.7.3
+              with:
+                  artifacts: "main.js,manifest.json,styles.css"
+                  token: ${{ secrets.GITHUB_TOKEN }}
