--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,5 +18,6 @@ jobs:
               # https://github.com/ncipollo/release-action
               uses: ncipollo/release-action@v1.7.3
               with:
+                  tag: v1.0.${{ github.run_number }}
                   artifacts: "main.js,manifest.json,styles.css"
-                  token: ${{ secrets.GITHUB_TOKEN }}
+                  token: ${{ secrets.TOKEN }}
